--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
   apply from: "gradle/config.gradle"
+  ext.production = hasProperty("production")
   repositories {
     google()
     jcenter()
