--- a/home/build.gradle
+++ b/home/build.gradle
@@ -1,10 +1,12 @@
 boolean production = hasProperty("production")
-
+println "production is ${production}"
 if (production) {
   apply plugin: "com.android.library"
   apply plugin: "kotlin-android"
   apply plugin: "kotlin-kapt"
-
+  kapt {
+    correctErrorTypes true
+  }
   android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -13,13 +15,18 @@ if (production) {
       targetSdkVersion 29
       versionCode 1
       versionName "1.0"
-
       testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
   }
 
   dependencies {
-    kapt "com.google.dagger:dagger-compiler:2.28"
+    implementation deps.appCompat
+    implementation deps.fragment
+    implementation deps.inject
+    implementation deps.dagger
+    implementation project(":core")
+    implementation project(":domain")
+    kapt deps.daggerProcessor
   }
 
 } else {
