--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ android {
   }
   defaultConfig {
     applicationId "com.nlgtuankiet.fera"
-    minSdkVersion 14
+    minSdkVersion 16
     targetSdkVersion 28
     versionCode 1
     versionName "1.0"
@@ -36,6 +36,7 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
     }
   }
+
 
   sourceSets {
     androidTest {
@@ -54,7 +55,6 @@ dependencies {
   kapt deps.daggerProcessor
   api deps.exec
   api deps.execKiller
-  implementation deps.ffmpeg
   api deps.kotlinStdLib
   api deps.kotlinCoroutine
   api deps.navigation
@@ -68,6 +68,7 @@ dependencies {
   }
   implementation("androidx.core:core-ktx:1.3.0")
   implementation("androidx.multidex:multidex:2.0.1")
+//  implementation 'com.arthenica:mobile-ffmpeg-full:4.3.2'
   api deps.appCompat
   api deps.fragment
   api deps.constraintLayout
