--- a/gradle/config.gradle
+++ b/gradle/config.gradle
@@ -1,3 +1,11 @@
+ext.dynamic = hasProperty("dynamic")
+ext.minSdk = 16
+ext.targetSdk = 28
+ext.vcode = 1
+ext.vname = "1.0"
+ext.compileSdk = 29
+ext.buildTools = "29.0.3"
+
 def daggerVersion = "2.28"
 def deps = [:]
 ext.deps = deps
