--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ apply from: "../gradle/config.gradle"
 kapt {
   correctErrorTypes true
 }
-def production = hasProperty("production")
 
 android {
   compileSdkVersion 29
@@ -45,15 +44,16 @@ android {
       java.srcDirs += ['src/test/java/com/nlgtuankiet/fera/share']
     }
   }
-  if (!production) {
+  if (dynamic) {
     dynamicFeatures += ":home"
+    dynamicFeatures += ":data"
   }
 }
 
 dependencies {
-  implementation deps.moshi
+  api deps.moshi
   kapt deps.moshiProcessor
-  implementation deps.dagger
+  api deps.dagger
   kapt deps.daggerProcessor
   api deps.exec
   api deps.execKiller
@@ -65,11 +65,12 @@ dependencies {
   api deps.daggerAndroid
   api(project(":domain"))
   api(project(":core"))
-  if (production) {
+  if (!dynamic) {
     api(project(":home"))
+    api(project(":data"))
   }
-  implementation("androidx.core:core-ktx:1.3.0")
-  implementation("androidx.multidex:multidex:2.0.1")
+  api("androidx.core:core-ktx:1.3.0")
+  api("androidx.multidex:multidex:2.0.1")
 //  implementation 'com.arthenica:mobile-ffmpeg-full:4.3.2'
   api deps.appCompat
   api deps.fragment
