--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
   apply from: "gradle/config.gradle"
+  ext {
+    kotlin_version = '1.3.72'
+  }
   project.ext {
     dynamic = hasProperty("dynamic")
   }
