--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,11 @@ buildscript {
   project.ext {
     dynamic = hasProperty("dynamic")
   }
-  repositories {
-    google()
-    jcenter()
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-  }
+  repositories { handler -> addAllRepositories(handler) }
   dependencies {
     classpath "com.android.tools.build:gradle:4.0.0"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4-M2"
+    classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.1'
 
     // TODO refactor
     classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.0-rc01"
@@ -21,12 +18,7 @@ buildscript {
 }
 
 allprojects {
-
-  repositories {
-    google()
-    jcenter()
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
-  }
+  repositories { handler -> addAllRepositories(handler) }
 }
 
 
