--- a/gradle/config.gradle
+++ b/gradle/config.gradle
@@ -21,8 +21,8 @@ deps.daggerProcessor = "com.google.dagger:dagger-compiler:$daggerVersion"
 deps.exec = "org.zeroturnaround:zt-exec:1.11"
 deps.execKiller = "org.zeroturnaround:zt-process-killer:1.10"
 
-deps.kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
-deps.kotlinCoroutine = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7"
+deps.kotlinStdLib = "org.jetbrains.kotlin:kotlin-stdlib:1.4-M2"
+deps.kotlinCoroutine = "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7-1.4-M2"
 deps.appCompat = "androidx.appcompat:appcompat:1.1.0"
 deps.fragment = "androidx.fragment:fragment-ktx:1.3.0-alpha06"
 deps.inject = "javax.inject:javax.inject:1"
@@ -35,17 +35,21 @@ deps.navigationDynamic = "androidx.navigation:navigation-dynamic-features-fragme
 deps.moshi = "com.squareup.moshi:moshi-kotlin:1.9.3"
 deps.moshiProcessor = "com.squareup.moshi:moshi-kotlin-codegen:1.9.3"
 
-//const val daggerVersion = "2.28"
-//
-//fun DependencyHandler.dagger() {
-//  api("com.google.dagger:dagger:$daggerVersion")
-//  kapt("com.google.dagger:dagger-compiler:$daggerVersion")
-//  kaptTest("com.google.dagger:dagger-compiler:$daggerVersion")
-//  kaptAndroidTest("com.google.dagger:dagger-compiler:$daggerVersion")
-//  api("com.google.dagger:dagger-android:$daggerVersion")
-//  api("com.google.dagger:dagger-android-support:$daggerVersion")
-//  kapt("com.google.dagger:dagger-android-processor:$daggerVersion")
-//  kaptTest("com.google.dagger:dagger-android-processor:$daggerVersion")
-//  kaptAndroidTest("com.google.dagger:dagger-android-processor:$daggerVersion")
-//}
-//
+deps.epoxy = "com.airbnb.android:epoxy:4.0.0-beta4"
+deps.epoxyProcessor = "com.airbnb.android:epoxy-processor:4.0.0-beta4"
+
+deps.mvrx = "com.airbnb.android:mvrx:1.5.0-SNAPSHOT"
+
+deps.assistedInject = 'com.squareup.inject:assisted-inject-annotations:0.5.2'
+deps.assistedInjectProccesor = 'com.squareup.inject:assisted-inject-processor:0.5.2'
+
+def addAllRepositories = { handler ->
+  handler.google()
+  handler.jcenter()
+  handler.mavenLocal()
+  handler.maven { url "https://jitpack.io" }
+  handler.maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+  handler.maven { url 'https://dl.bintray.com/kotlin/kotlin-eap/' }
+  handler.maven { url 'https://dl.bintray.com/kotlin/kotlinx/' }
+}
+ext.addAllRepositories = addAllRepositories
