--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,26 @@ allprojects {
   repositories { handler -> addAllRepositories(handler) }
 }
 
+def listProjectHasApk = []
+def installApkDebug = tasks.register("installApkDebug") {
+  group "install"
+  description "Build base apk + feature module apk, and run adb install-multiple"
+  doLast {
+    def p = "./scripts/install_apk.sh devV16 debug ${listProjectHasApk.toSet().join(" ")}".execute()
+    println p.text
+  }
+}
+
+subprojects { p ->
+  p.tasks.whenTaskAdded { task ->
+    if (task.name == "assembleDebug") {
+      listProjectHasApk += p.projectDir.name
+      installApkDebug.configure {
+        dependsOn task
+      }
+    }
+  }
+}
+
+
 
