--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -13,3 +13,8 @@ dependencies {
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+compileKotlin {
+  kotlinOptions {
+    freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
+  }
+}
