--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -30,6 +30,7 @@ android {
   }
   kotlinOptions {
     jvmTarget = JavaVersion.VERSION_1_8.toString()
+    freeCompilerArgs = ["-XXLanguage:+InlineClasses"]
   }
   buildFeatures {
     viewBinding true
