--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -55,6 +55,7 @@ android {
       implementation deps.kotlinCoroutine
       implementation deps.moshi
       implementation deps.dagger
+      implementation deps.okHttp
       implementation deps.exec
       implementation deps.epoxy
       implementation deps.assistedInject
