--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ kapt {
 
 android {
   compileOptions {
-//    coreLibraryDesugaringEnabled true TODO
+    //    coreLibraryDesugaringEnabled true TODO
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
@@ -55,13 +55,15 @@ android {
 
   sourceSets {
     androidTest {
-      java.srcDirs += ['src/test/java/com/nlgtuankiet/fera/share']
+      java.srcDirs += [
+        'src/test/java/com/nlgtuankiet/fera/share'
+      ]
     }
   }
   if (dynamic) {
     def dynamicModules = [
-        "home",
-        "data",
+      "home",
+      "data",
     ]
 
     dynamicModules.forEach { module ->
@@ -73,7 +75,7 @@ android {
 }
 
 dependencies {
-//  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.5' TODO
+  //  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.5' TODO
   api deps.moshi
   kapt deps.moshiProcessor
   api deps.dagger
@@ -100,7 +102,7 @@ dependencies {
   }
   api("androidx.core:core-ktx:1.3.0")
   api("androidx.multidex:multidex:2.0.1")
-//  implementation 'com.arthenica:mobile-ffmpeg-full:4.3.2'
+  //  implementation 'com.arthenica:mobile-ffmpeg-full:4.3.2'
   api deps.appCompat
   api deps.fragment
   api deps.constraintLayout
