--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ kapt {
 
 android {
   compileOptions {
-    //    coreLibraryDesugaringEnabled true TODO
+    //    coreLibraryDesugaringEnabled true
     sourceCompatibility JavaVersion.VERSION_1_8
     targetCompatibility JavaVersion.VERSION_1_8
   }
@@ -34,6 +34,9 @@ android {
     }
   }
   defaultConfig {
+    lintOptions {
+      abortOnError false
+    }
     multiDexEnabled true
     applicationId "com.nlgtuankiet.fera"
     minSdkVersion minSdk
@@ -75,7 +78,7 @@ android {
 }
 
 dependencies {
-  //  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.5' TODO
+  //  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.5'
   api deps.moshi
   kapt deps.moshiProcessor
   api deps.dagger
@@ -102,12 +105,12 @@ dependencies {
   }
   api("androidx.core:core-ktx:1.3.0")
   api("androidx.multidex:multidex:2.0.1")
-  //  implementation 'com.arthenica:mobile-ffmpeg-full:4.3.2'
   api deps.appCompat
   api deps.fragment
   api deps.constraintLayout
   api deps.inject
   testImplementation("junit:junit:4.12")
+  kaptTest deps.daggerProcessor
   androidTestImplementation("androidx.test.ext:junit:1.1.1")
   androidTestImplementation("androidx.test.espresso:espresso-core:3.2.0")
 }
