--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,130 +1,69 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
 executors:
   android_executor:
     docker:
       - image: circleci/android:api-29
-    working_directory: ~/aam
-    environment:
-      JAVA_TOOL_OPTIONS: "-Xmx2048m"
-      GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dorg.gradle.workers.max=2"
-      TERM: dumb
-
-commands:
-  check:
-    description: "Check code style + lint"
-    steps:
-      - run:
-          name: Check all
-          command: ./gradlew check
-  restore_workspace:
-    description: "Restore workspace"
-    steps:
-      - attach_workspace:
-          at: ~/aam
-  save_workspace:
-    description: "Save workspace"
-    steps:
-      - persist_to_workspace:
-          root: .
-          paths:
-            - build
-            - ./**/build
-  generate_gradle_lock:
-    description: "Generate gradle.lock file"
-    steps:
-      - run:
-          name: Delete old gradle.lock if any
-          command: rm -rf gradle.lock
-      - run:
-          name: Generate gradle.lock
-          command: find . -name "*.gradle" -type f -exec cat {} > gradle.lock \;
-      - run:
-          name: Debug gradle.lock
-          command: cat gradle.lock
-  restore_gradle_cache:
-    description: "Restore gradle cache (~/.gradle)"
-    steps:
-      - generate_gradle_lock
-      - restore_cache:
-          keys:
-            - v1-{{ checksum "gradle/wrapper/gradle-wrapper.properties"}}-{{ checksum "gradle.lock"}}
-            - v1-{{ checksum "gradle/wrapper/gradle-wrapper.properties"}}-
-  save_gradle_cache:
-    description: "Save gradle cache (~/.gradle)"
-    steps:
-      - generate_gradle_lock
-      - save_cache:
-          key: v1-{{ checksum "gradle/wrapper/gradle-wrapper.properties"}}-{{ checksum "gradle.lock"}}
-          paths:
-            - "~/.gradle"
+    working_directory: ~/fera
 
 jobs:
-  check-apk:
+  verify-pull-request:
     executor: android_executor
     steps:
       - checkout
-      - check
       - run:
-          name: Build Release Apk
+          name: setup
+          command: bash ./scripts/setup.sh
+      - run:
+          name: spotless lint test
+          command: ./gradlew testDebugUnitTest lintDebug spotlessCheck
+          no_output_timeout: 1h
+      - run:
+          name: dynamic build
+          command: ./gradlew :app:bundleDebug -Pdynamic
+          no_output_timeout: 30m
+      - run:
+          name: dynamic build exclude
+          command: ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*"
+          no_output_timeout: 30m
+      - run:
+          name: build release apk
           command: sh ./scripts/build_release_apk.sh
-      - store_artifacts:
-          path: ./build/universal.apk
-      - store_artifacts:
-          path: ./app/build/reports
-      - save_workspace
-  compare-apk:
-    executor: gcloud_executor
-    steps:
-      - checkout
-      - restore_workspace
+          no_output_timeout: 30m
       - run:
-          name: Check list
-          command: ls -lha && pwd
+          name: download master apk
+          command: bash ./scripts/download_master_apk.sh
       - run:
-          name: Compare apk
-          command: bash ./scripts/compare_apk.sh
-      - save_workspace
-  update-master-apk:
-    executor: gcloud_executor
-    steps:
-      - checkout
-      - restore_workspace
-      - run:
-          name: Update master apk
-          command: bash ./scripts/update_master_apk.sh ./build/universal.apk
-  danger:
+          name: danger
+          command: bundle install && bundle exec danger --new-comment
+  upload-apk:
     executor: android_executor
     steps:
       - checkout
-      - restore_workspace
       - run:
-          name: Danger
-          command: bundle install && bundle exec danger
+          name: setup
+          command: bash ./scripts/setup.sh
+      - run:
+          name: build release apk
+          command: sh ./scripts/build_release_apk.sh
+          no_output_timeout: 30m
+      - run:
+          name: upload apk
+          command: bash ./scripts/upload_master_apk.sh
 
 workflows:
   version: 2
   pull-request-flow:
     jobs:
-      - check-apk:
+      - verify-pull-request:
           filters:
             branches:
               ignore:
                 - master
-      - compare-apk:
-          requires:
-            - check-apk
-      - danger:
-          requires:
-            - compare-apk
   master-flow:
     jobs:
-      - check-apk:
+      - upload-apk:
           filters:
             branches:
               only:
                 - master
-      - update-master-apk:
-          requires:
-            - check-apk
