--- a/.circleci/gradle.properties
+++ b/.circleci/gradle.properties
@@ -1,5 +1,5 @@
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 org.gradle.daemon=false
 org.gradle.workers.max=16
 # Xmx specifies the maximum memory allocation pool for a Java virtual machine
