--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,8 @@ jobs:
           name: danger
           command: bundle install && bundle exec danger --new-comment --dangerfile=lint.danger
       - store_artifacts:
-          path: ./
-          destination: lint-results-debug.html
+          path: ./*/build/reports
+          destination: reports
   test-debug:
     executor: android_executor
     steps:
