improve gradle.properties

--- a/.circleci/gradle.properties
+++ b/.circleci/gradle.properties
@@ -1,9 +1,3 @@
-android.useAndroidX=true
-android.enableJetifier=false
 org.gradle.daemon=false
 org.gradle.workers.max=16
-# Xmx specifies the maximum memory allocation pool for a Java virtual machine
-# Xms specifies the initial memory allocation pool
-org.gradle.jvmargs=-Xms4g -Xmx4g -Dfile.encoding=UTF-8 -Dkotlin.compiler.execution.strategy="in-process"
-org.gradle.parallel=true
-android.enableR8=true
+org.gradle.jvmargs=-Xms4g -Xmx4g -Dfile.encoding=UTF-8
