print all start params

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 android.useAndroidX=true
-android.enableR8=true
 android.enableJetifier=false
 
 org.gradle.parallel=true
 
 kotlin.compiler.execution.strategy="in-process"
 kotlin.code.style=official
+kotlin.incremental=true
