--- a/.circleci/gradle.properties
+++ b/.circleci/gradle.properties
@@ -1,3 +1,3 @@
-org.gradle.daemon=false
+org.gradle.daemon=true
 org.gradle.workers.max=16
-org.gradle.jvmargs=-Xms4g -Xmx4g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms3g -Xmx3g -XX:MaxPermSize=512m -Dfile.encoding=UTF-8
