--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@ android.useAndroidX=true
 android.enableJetifier=false
 
 org.gradle.parallel=true
+org.gradle.configureondemand=true
 
 kotlin.compiler.execution.strategy="in-process"
 kotlin.code.style=official
