--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,14 +109,14 @@ jobs:
           command: bundle install && bundle exec danger --new-comment --dangerfile=compare-apk.danger
       - run:
           name: lint test spotless
-          command: ./gradlew testDebugUnitTest lintDebug spotlessCheck --offline
+          command: ./gradlew testDebugUnitTest lintDebug spotlessCheck
           no_output_timeout: 1h
       - run:
           name: merge lint report
           command: bash ./scripts/merge-lint-report.sh
       - run:
           name: danger
-          command: bundle install && bundle exec danger --new-comment --dangerfile=lint.danger
+          command: bundle exec danger --new-comment --dangerfile=lint.danger
       - store_artifacts:
           path: app/build/reports/lint-results-debug.html
           destination: app-lint-results-debug.html
