--- a/.circleci/gradle.properties
+++ b/.circleci/gradle.properties
@@ -1,2 +1,2 @@
-org.gradle.daemon=true
-org.gradle.jvmargs=-Xms1536m -Xmx1536m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8
+org.gradle.daemon=false
+org.gradle.jvmargs=-Xms4g -Xmx4g -XX:MaxPermSize=512m -Dfile.encoding=UTF-8
