--- a/.circleci/gradle.properties
+++ b/.circleci/gradle.properties
@@ -1,2 +1,3 @@
 org.gradle.daemon=false
 org.gradle.jvmargs=-Xms4g -Xmx4g -XX:MaxPermSize=512m -Dfile.encoding=UTF-8
+kotlin.compiler.execution.strategy=in-process
