core/src/main/AndroidManifest.xml#L6 - Unexpected text found in layout file: “/”

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,5 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nlgtuankiet.fera.core">
-
-    /
-</manifest>
+<manifest package="com.nlgtuankiet.fera.core" />
