--- a/home/src/main/AndroidManifest.xml
+++ b/home/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <dist:module
         dist:instant="false"
-        dist:title="@string/title_home">
+        dist:title="Home">
         <dist:delivery>
             <dist:install-time />
         </dist:delivery>
