ci setup for build scan

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,9 +8,8 @@ gradleEnterprise {
   buildScan {
     termsOfServiceUrl = "https://gradle.com/terms-of-service"
     termsOfServiceAgree = "yes"
-    if (isInCI) {
-      publishAlways()
-    }
+    publishAlwaysIf(isInCI)
+    uploadInBackground !isInCI
   }
 }
 
