--- a/gradle/config.gradle
+++ b/gradle/config.gradle
@@ -1,3 +1,4 @@
+import java.text.SimpleDateFormat
 import java.util.regex.Pattern
 
 def hasProject = false
@@ -17,6 +18,16 @@ println "dynamic is $dynamic"
 
 ext {
   isInCI = Boolean.parseBoolean(System.getenv().getOrDefault("CI", "false"))
+
+  time = {
+    def format = new SimpleDateFormat("HH:mm:ss")
+    return format.format(new Date())
+  }
+
+  log = { message ->
+    println "${time()} $message"
+  }
+
   shouldInclude = { moduleName ->
     if (ext.has('include')) {
       return Pattern.compile(include, Pattern.CASE_INSENSITIVE).matcher(moduleName).find()
