--- a/.circleci/gradle.properties
+++ b/.circleci/gradle.properties
@@ -1,3 +1,3 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xms2g -Xmx2g -XX:MaxPermSize=256m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms1536m -Xmx1536m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8
 kotlin.compiler.execution.strategy=in-process
