--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ commands:
     steps:
       - checkout
       - run:
-          name: setup
+          name: Initialize
           command: bash ./scripts/setup.sh
 
 jobs:
@@ -92,11 +92,11 @@ jobs:
     steps:
       - init
       - run:
-          name: build release apk
+          name: Build release apk
           command: sh ./scripts/build_release_apk.sh
           no_output_timeout: 30m
       - run:
-          name: download master apk
+          name: Download master apk
           command: bash ./scripts/download_master_apk.sh
       - store_artifacts:
           path: build/universal.apk
@@ -105,17 +105,17 @@ jobs:
           path: build/master.apk
           destination: master.apk
       - run:
-          name: danger
+          name: Danger apk compare
           command: bundle install && bundle exec danger --new-comment --dangerfile=compare-apk.danger
       - run:
-          name: lint test spotless
+          name: Lint test spotless
           command: ./gradlew testDebugUnitTest lintDebug spotlessCheck
           no_output_timeout: 1h
       - run:
-          name: merge lint report
+          name: Merge lint report
           command: bash ./scripts/merge-lint-report.sh
       - run:
-          name: danger
+          name: Danger lint
           command: bundle exec danger --new-comment --dangerfile=lint.danger
       - store_artifacts:
           path: app/build/reports/lint-results-debug.html
@@ -127,11 +127,11 @@ jobs:
           path: home/build/reports/lint-results-debug.html
           destination: home-lint-results-debug.html
       - run:
-          name: dynamic build include all modules
+          name: Dynamic build include all modules
           command: ./gradlew :app:bundleDebug -Pdynamic --offline
           no_output_timeout: 30m
       - run:
-          name: dynamic build exclude all modules
+          name: Dynamic build exclude all modules
           command: ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*" --offline
           no_output_timeout: 30m
   upload-apk:
@@ -139,14 +139,14 @@ jobs:
     steps:
       - checkout
       - run:
-          name: setup
+          name: Initialize
           command: bash ./scripts/setup.sh
       - run:
-          name: build release apk
+          name: Build release apk
           command: sh ./scripts/build_release_apk.sh
           no_output_timeout: 30m
       - run:
-          name: upload apk
+          name: Upload apk
           command: bash ./scripts/upload_master_apk.sh
       - store_artifacts:
           path: ./build/universal.apk
