--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -60,8 +60,12 @@ android {
     } else {
       kapt deps.assistedInjectProccesor
       kapt deps.epoxyProcessor
-
-      implementation project(":core")
+      def maybeImplementProject = { projectName ->
+        if (project.name != projectName) {
+          implementation project(":$projectName")
+        }
+      }
+      maybeImplementProject("core")
       implementation project(":domain")
     }
   }
