hard code check lint only

--- a/gradle/module.gradle
+++ b/gradle/module.gradle
@@ -17,7 +17,7 @@ kapt {
 android {
   lintOptions {
     checkDependencies true
-    disable 'ObsoleteLintCustomCheck'
+    //    disable 'ObsoleteLintCustomCheck'
   }
   compileSdkVersion compileSdk
   buildToolsVersion buildTools
