Revert "hard code check lint only"
This reverts commit 63739d500365990ca66ab0da24232ff763658079.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ kapt {
 
 android {
   lintOptions {
-    //    disable 'ObsoleteLintCustomCheck'
+    disable 'ObsoleteLintCustomCheck'
     abortOnError false
   }
   compileOptions {
