--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,29 +91,29 @@ jobs:
     executor: android_executor
     steps:
       - init
-#      - run:
-#          name: Build release apk
-#          command: sh ./scripts/build_release_apk.sh
-#          no_output_timeout: 30m
-#      - run:
-#          name: Download master apk
-#          command: bash ./scripts/download_master_apk.sh
-#      - store_artifacts:
-#          path: build/universal.apk
-#          destination: universal.apk
-#      - store_artifacts:
-#          path: build/master.apk
-#          destination: master.apk
-#      - run:
-#          name: Danger apk compare
-#          command: bundle install && bundle exec danger --new-comment --dangerfile=compare-apk.danger
+      - run:
+          name: Build release apk
+          command: sh ./scripts/build_release_apk.sh
+          no_output_timeout: 30m
+      - run:
+          name: Download master apk
+          command: bash ./scripts/download_master_apk.sh
+      - store_artifacts:
+          path: build/universal.apk
+          destination: universal.apk
+      - store_artifacts:
+          path: build/master.apk
+          destination: master.apk
+      - run:
+          name: Danger apk compare
+          command: bundle install && bundle exec danger --new-comment --dangerfile=compare-apk.danger
       - run:
           name: Lint test spotless
           command: ./gradlew testDebugUnitTest lintDebug spotlessCheck
           no_output_timeout: 1h
       - run:
           name: Danger lint
-          command: bundle install && bundle exec danger --new-comment --dangerfile=lint.danger
+          command: bundle exec danger --new-comment --dangerfile=lint.danger
       - store_artifacts:
           path: app/build/reports/lint-results-debug.html
           destination: app-lint-results-debug.html
@@ -123,14 +123,14 @@ jobs:
       - store_artifacts:
           path: home/build/reports/lint-results-debug.html
           destination: home-lint-results-debug.html
-#      - run:
-#          name: Dynamic build include all modules
-#          command: ./gradlew :app:bundleDebug -Pdynamic --offline
-#          no_output_timeout: 30m
-#      - run:
-#          name: Dynamic build exclude all modules
-#          command: ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*" --offline
-#          no_output_timeout: 30m
+      - run:
+          name: Dynamic build include all modules
+          command: ./gradlew :app:bundleDebug -Pdynamic --offline
+          no_output_timeout: 30m
+      - run:
+          name: Dynamic build exclude all modules
+          command: ./gradlew :app:bundleDebug -Pdynamic -Pexclude=".*" --offline
+          no_output_timeout: 30m
   upload-apk:
     executor: android_executor
     steps:
